app-deployment.yaml
<<<<<<< HEAD
#Deploy Aplicação:
# app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: chrisgarcia0/avaliacao-infra-app:latest
        ports:
        - containerPort: 3000
apiVersion: v1
kind: Service
metadata:
  name: avaliacao-infra-app
spec:
  type: LoadBalancer
  selector:
    app: avaliacao-infra-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: chrisgarcia0/avaliacao-infra-app:latest
        ports:
        - containerPort: 3000
>>>>>>> c3b670c (Arquivos aplicacao)
