ingress.yaml
#Configuração de Ingress:
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: chris-teste-infra.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avaliacao-infra-app
            port:
              number: 80
